main.output
Terminals unused in grammar

   THEN


State 109 충돌: 2 쉬프트/리듀스
State 113 충돌: 1 쉬프트/리듀스
State 120 충돌: 1 쉬프트/리듀스
State 128 충돌: 1 쉬프트/리듀스
State 134 충돌: 1 쉬프트/리듀스


문법

    0 $accept: PROGRAM $end

    1 PROGRAM: MAINPROG ID SEMICOLON DECLARATIONS SUBPROGRAM_DECLARATIONS COMPOUND_STATEMENT

    2 DECLARATIONS: TYPE IDENTIFIER_LIST SEMICOLON DECLARATIONS
    3             | %empty

    4 IDENTIFIER_LIST: ID
    5                | ID ',' IDENTIFIER_LIST

    6 TYPE: STANDARD_TYPE
    7     | STANDARD_TYPE '[' INTEGER ']'

    8 STANDARD_TYPE: "int"
    9              | "float"

   10 SUBPROGRAM_DECLARATIONS: SUBPROGRAM_DECLARATION SUBPROGRAM_DECLARATIONS
   11                        | %empty

   12 SUBPROGRAM_DECLARATION: SUBPROGRAM_HEAD DECLARATIONS COMPOUND_STATEMENT

   13 SUBPROGRAM_HEAD: FUNCTION ID ARGUMENTS ':' STANDARD_TYPE SEMICOLON
   14                | PROCEDURE ID ARGUMENTS SEMICOLON

   15 ARGUMENTS: '(' PARAMETER_LIST ')'
   16          | %empty

   17 PARAMETER_LIST: IDENTIFIER_LIST ':' TYPE
   18               | IDENTIFIER_LIST ':' TYPE SEMICOLON PARAMETER_LIST

   19 COMPOUND_STATEMENT: BODY_BEGIN STATEMENT_LIST BODY_END

   20 STATEMENT_LIST: STATEMENT
   21               | STATEMENT SEMICOLON STATEMENT_LIST

   22 STATEMENT: VARIABLE '=' EXPRESSION
   23          | PRINT_STATEMENT
   24          | PROCEDURE_STATEMENT
   25          | COMPOUND_STATEMENT
   26          | IF_STATEMENT
   27          | WHILE_STATEMENT
   28          | FOR_STATEMENT
   29          | RETURN EXPRESSION
   30          | NOP

   31 IF_STATEMENT: IF EXPRESSION ':' STATEMENT
   32             | IF EXPRESSION ':' STATEMENT ELIF_STATEMENT
   33             | IF EXPRESSION ':' STATEMENT ELIF_STATEMENT ELSE ':' STATEMENT
   34             | IF EXPRESSION ':' STATEMENT ELSE ':' STATEMENT

   35 ELIF_STATEMENT: ELIF EXPRESSION ':' STATEMENT
   36               | ELIF EXPRESSION ':' STATEMENT ELIF_STATEMENT

   37 WHILE_STATEMENT: WHILE EXPRESSION ':' STATEMENT
   38                | WHILE EXPRESSION ':' STATEMENT ELSE ':' STATEMENT

   39 FOR_STATEMENT: FOR EXPRESSION IN EXPRESSION ':' STATEMENT
   40              | FOR EXPRESSION IN EXPRESSION ':' STATEMENT ELSE ':' STATEMENT

   41 PRINT_STATEMENT: PRINT
   42                | PRINT '(' EXPRESSION ')'

   43 VARIABLE: ID
   44         | ID '[' EXPRESSION ']'

   45 PROCEDURE_STATEMENT: ID '(' ACTUAL_PARAMETER_EXPRESSION ')'

   46 ACTUAL_PARAMETER_EXPRESSION: EXPRESSION_LIST
   47                            | %empty

   48 EXPRESSION_LIST: EXPRESSION
   49                | EXPRESSION ',' EXPRESSION_LIST

   50 EXPRESSION: SIMPLE_EXPRESSION
   51           | SIMPLE_EXPRESSION RELOP SIMPLE_EXPRESSION

   52 SIMPLE_EXPRESSION: TERM
   53                  | TERM ADDOP SIMPLE_EXPRESSION

   54 TERM: FACTOR
   55     | FACTOR MULTOP TERM

   56 FACTOR: INTEGER
   57       | FLOAT
   58       | VARIABLE
   59       | PROCEDURE_STATEMENT
   60       | OP_NOT FACTOR
   61       | SIGN FACTOR

   62 SIGN: OP_PLUS
   63     | OP_MINUS

   64 RELOP: OP_LET
   65      | OP_GET
   66      | OP_LT
   67      | OP_GT
   68      | OP_EQ
   69      | OP_NEQ

   70 ADDOP: OP_PLUS
   71      | OP_MINUS

   72 MULTOP: OP_MUL
   73       | OP_DIV


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 42 45
')' (41) 15 42 45
',' (44) 5 49
':' (58) 13 17 18 31 32 33 34 35 36 37 38 39 40
'=' (61) 22
'[' (91) 7 44
']' (93) 7 44
error (256)
ID <name> (258) 1 4 5 13 14 43 44 45
INTEGER <intData> (259) 7 56
FLOAT <floatData> (260) 57
SEMICOLON (261) 1 2 13 14 18 21
"int" (262) 8
"float" (263) 9
MAINPROG (264) 1
FUNCTION (265) 13
PROCEDURE (266) 14
BODY_BEGIN (267) 19
BODY_END (268) 19
IF (269) 31 32 33 34
ELIF (270) 35 36
THEN (271)
ELSE (272) 33 34 38 40
NOP (273) 30
WHILE (274) 37 38
FOR (275) 39 40
RETURN (276) 29
PRINT (277) 41 42
IN (278) 39 40
OP_PLUS (279) 62 70
OP_MINUS (280) 63 71
OP_MUL (281) 72
OP_DIV (282) 73
OP_EQ (283) 68
OP_NEQ (284) 69
OP_LET (285) 64
OP_GET (286) 65
OP_LT (287) 66
OP_GT (288) 67
OP_NOT (289) 60


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
PROGRAM <name> (43)
    on left: 1, on right: 0
DECLARATIONS <nameNodeList> (44)
    on left: 2 3, on right: 1 2 12
IDENTIFIER_LIST <nameNodeList> (45)
    on left: 4 5, on right: 2 5 17 18
TYPE <intData> (46)
    on left: 6 7, on right: 2 17 18
STANDARD_TYPE <intData> (47)
    on left: 8 9, on right: 6 7 13
SUBPROGRAM_DECLARATIONS <subProgList> (48)
    on left: 10 11, on right: 1 10
SUBPROGRAM_DECLARATION <subProgNodeData> (49)
    on left: 12, on right: 10
SUBPROGRAM_HEAD <subProgNodeData> (50)
    on left: 13 14, on right: 12
ARGUMENTS <nameNodeList> (51)
    on left: 15 16, on right: 13 14
PARAMETER_LIST <nameNodeList> (52)
    on left: 17 18, on right: 15 18
COMPOUND_STATEMENT <nameNodeList> (53)
    on left: 19, on right: 1 12 25
STATEMENT_LIST <nameNodeList> (54)
    on left: 20 21, on right: 19 21
STATEMENT <nameNodeList> (55)
    on left: 22 23 24 25 26 27 28 29 30, on right: 20 21 31 32 33 34
    35 36 37 38 39 40
IF_STATEMENT <nameNodeList> (56)
    on left: 31 32 33 34, on right: 26
ELIF_STATEMENT <nameNodeList> (57)
    on left: 35 36, on right: 32 33 36
WHILE_STATEMENT <nameNodeList> (58)
    on left: 37 38, on right: 27
FOR_STATEMENT <nameNodeList> (59)
    on left: 39 40, on right: 28
PRINT_STATEMENT <nameNodeList> (60)
    on left: 41 42, on right: 23
VARIABLE <name> (61)
    on left: 43 44, on right: 22 58
PROCEDURE_STATEMENT <nameNodeList> (62)
    on left: 45, on right: 24 59
ACTUAL_PARAMETER_EXPRESSION <nameNodeList> (63)
    on left: 46 47, on right: 45
EXPRESSION_LIST <nameNodeList> (64)
    on left: 48 49, on right: 46 49
EXPRESSION <nameNodeList> (65)
    on left: 50 51, on right: 22 29 31 32 33 34 35 36 37 38 39 40 42
    44 48 49
SIMPLE_EXPRESSION <nameNodeList> (66)
    on left: 52 53, on right: 50 51 53
TERM <nameNodeList> (67)
    on left: 54 55, on right: 52 53 55
FACTOR <nameNodeList> (68)
    on left: 56 57 58 59 60 61, on right: 54 55 60 61
SIGN <name> (69)
    on left: 62 63, on right: 61
RELOP <name> (70)
    on left: 64 65 66 67 68 69, on right: 51
ADDOP <name> (71)
    on left: 70 71, on right: 53
MULTOP <name> (72)
    on left: 72 73, on right: 55


State 0

    0 $accept: . PROGRAM $end

    MAINPROG  shift, and go to state 1

    PROGRAM  go to state 2


State 1

    1 PROGRAM: MAINPROG . ID SEMICOLON DECLARATIONS SUBPROGRAM_DECLARATIONS COMPOUND_STATEMENT

    ID  shift, and go to state 3


State 2

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 4


State 3

    1 PROGRAM: MAINPROG ID . SEMICOLON DECLARATIONS SUBPROGRAM_DECLARATIONS COMPOUND_STATEMENT

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: PROGRAM $end .

    $default  accept


State 5

    1 PROGRAM: MAINPROG ID SEMICOLON . DECLARATIONS SUBPROGRAM_DECLARATIONS COMPOUND_STATEMENT

    "int"    shift, and go to state 6
    "float"  shift, and go to state 7

    $default  reduce using rule 3 (DECLARATIONS)

    DECLARATIONS   go to state 8
    TYPE           go to state 9
    STANDARD_TYPE  go to state 10


State 6

    8 STANDARD_TYPE: "int" .

    $default  reduce using rule 8 (STANDARD_TYPE)


State 7

    9 STANDARD_TYPE: "float" .

    $default  reduce using rule 9 (STANDARD_TYPE)


State 8

    1 PROGRAM: MAINPROG ID SEMICOLON DECLARATIONS . SUBPROGRAM_DECLARATIONS COMPOUND_STATEMENT

    FUNCTION   shift, and go to state 11
    PROCEDURE  shift, and go to state 12

    $default  reduce using rule 11 (SUBPROGRAM_DECLARATIONS)

    SUBPROGRAM_DECLARATIONS  go to state 13
    SUBPROGRAM_DECLARATION   go to state 14
    SUBPROGRAM_HEAD          go to state 15


State 9

    2 DECLARATIONS: TYPE . IDENTIFIER_LIST SEMICOLON DECLARATIONS

    ID  shift, and go to state 16

    IDENTIFIER_LIST  go to state 17


State 10

    6 TYPE: STANDARD_TYPE .
    7     | STANDARD_TYPE . '[' INTEGER ']'

    '['  shift, and go to state 18

    $default  reduce using rule 6 (TYPE)


State 11

   13 SUBPROGRAM_HEAD: FUNCTION . ID ARGUMENTS ':' STANDARD_TYPE SEMICOLON

    ID  shift, and go to state 19


State 12

   14 SUBPROGRAM_HEAD: PROCEDURE . ID ARGUMENTS SEMICOLON

    ID  shift, and go to state 20


State 13

    1 PROGRAM: MAINPROG ID SEMICOLON DECLARATIONS SUBPROGRAM_DECLARATIONS . COMPOUND_STATEMENT

    BODY_BEGIN  shift, and go to state 21

    COMPOUND_STATEMENT  go to state 22


State 14

   10 SUBPROGRAM_DECLARATIONS: SUBPROGRAM_DECLARATION . SUBPROGRAM_DECLARATIONS

    FUNCTION   shift, and go to state 11
    PROCEDURE  shift, and go to state 12

    $default  reduce using rule 11 (SUBPROGRAM_DECLARATIONS)

    SUBPROGRAM_DECLARATIONS  go to state 23
    SUBPROGRAM_DECLARATION   go to state 14
    SUBPROGRAM_HEAD          go to state 15


State 15

   12 SUBPROGRAM_DECLARATION: SUBPROGRAM_HEAD . DECLARATIONS COMPOUND_STATEMENT

    "int"    shift, and go to state 6
    "float"  shift, and go to state 7

    $default  reduce using rule 3 (DECLARATIONS)

    DECLARATIONS   go to state 24
    TYPE           go to state 9
    STANDARD_TYPE  go to state 10


State 16

    4 IDENTIFIER_LIST: ID .
    5                | ID . ',' IDENTIFIER_LIST

    ','  shift, and go to state 25

    $default  reduce using rule 4 (IDENTIFIER_LIST)


State 17

    2 DECLARATIONS: TYPE IDENTIFIER_LIST . SEMICOLON DECLARATIONS

    SEMICOLON  shift, and go to state 26


State 18

    7 TYPE: STANDARD_TYPE '[' . INTEGER ']'

    INTEGER  shift, and go to state 27


State 19

   13 SUBPROGRAM_HEAD: FUNCTION ID . ARGUMENTS ':' STANDARD_TYPE SEMICOLON

    '('  shift, and go to state 28

    $default  reduce using rule 16 (ARGUMENTS)

    ARGUMENTS  go to state 29


State 20

   14 SUBPROGRAM_HEAD: PROCEDURE ID . ARGUMENTS SEMICOLON

    '('  shift, and go to state 28

    $default  reduce using rule 16 (ARGUMENTS)

    ARGUMENTS  go to state 30


State 21

   19 COMPOUND_STATEMENT: BODY_BEGIN . STATEMENT_LIST BODY_END

    ID          shift, and go to state 31
    BODY_BEGIN  shift, and go to state 21
    IF          shift, and go to state 32
    NOP         shift, and go to state 33
    WHILE       shift, and go to state 34
    FOR         shift, and go to state 35
    RETURN      shift, and go to state 36
    PRINT       shift, and go to state 37

    COMPOUND_STATEMENT   go to state 38
    STATEMENT_LIST       go to state 39
    STATEMENT            go to state 40
    IF_STATEMENT         go to state 41
    WHILE_STATEMENT      go to state 42
    FOR_STATEMENT        go to state 43
    PRINT_STATEMENT      go to state 44
    VARIABLE             go to state 45
    PROCEDURE_STATEMENT  go to state 46


State 22

    1 PROGRAM: MAINPROG ID SEMICOLON DECLARATIONS SUBPROGRAM_DECLARATIONS COMPOUND_STATEMENT .

    $default  reduce using rule 1 (PROGRAM)


State 23

   10 SUBPROGRAM_DECLARATIONS: SUBPROGRAM_DECLARATION SUBPROGRAM_DECLARATIONS .

    $default  reduce using rule 10 (SUBPROGRAM_DECLARATIONS)


State 24

   12 SUBPROGRAM_DECLARATION: SUBPROGRAM_HEAD DECLARATIONS . COMPOUND_STATEMENT

    BODY_BEGIN  shift, and go to state 21

    COMPOUND_STATEMENT  go to state 47


State 25

    5 IDENTIFIER_LIST: ID ',' . IDENTIFIER_LIST

    ID  shift, and go to state 16

    IDENTIFIER_LIST  go to state 48


State 26

    2 DECLARATIONS: TYPE IDENTIFIER_LIST SEMICOLON . DECLARATIONS

    "int"    shift, and go to state 6
    "float"  shift, and go to state 7

    $default  reduce using rule 3 (DECLARATIONS)

    DECLARATIONS   go to state 49
    TYPE           go to state 9
    STANDARD_TYPE  go to state 10


State 27

    7 TYPE: STANDARD_TYPE '[' INTEGER . ']'

    ']'  shift, and go to state 50


State 28

   15 ARGUMENTS: '(' . PARAMETER_LIST ')'

    ID  shift, and go to state 16

    IDENTIFIER_LIST  go to state 51
    PARAMETER_LIST   go to state 52


State 29

   13 SUBPROGRAM_HEAD: FUNCTION ID ARGUMENTS . ':' STANDARD_TYPE SEMICOLON

    ':'  shift, and go to state 53


State 30

   14 SUBPROGRAM_HEAD: PROCEDURE ID ARGUMENTS . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 31

   43 VARIABLE: ID .
   44         | ID . '[' EXPRESSION ']'
   45 PROCEDURE_STATEMENT: ID . '(' ACTUAL_PARAMETER_EXPRESSION ')'

    '['  shift, and go to state 55
    '('  shift, and go to state 56

    $default  reduce using rule 43 (VARIABLE)


State 32

   31 IF_STATEMENT: IF . EXPRESSION ':' STATEMENT
   32             | IF . EXPRESSION ':' STATEMENT ELIF_STATEMENT
   33             | IF . EXPRESSION ':' STATEMENT ELIF_STATEMENT ELSE ':' STATEMENT
   34             | IF . EXPRESSION ':' STATEMENT ELSE ':' STATEMENT

    ID        shift, and go to state 31
    INTEGER   shift, and go to state 57
    FLOAT     shift, and go to state 58
    OP_PLUS   shift, and go to state 59
    OP_MINUS  shift, and go to state 60
    OP_NOT    shift, and go to state 61

    VARIABLE             go to state 62
    PROCEDURE_STATEMENT  go to state 63
    EXPRESSION           go to state 64
    SIMPLE_EXPRESSION    go to state 65
    TERM                 go to state 66
    FACTOR               go to state 67
    SIGN                 go to state 68


State 33

   30 STATEMENT: NOP .

    $default  reduce using rule 30 (STATEMENT)


State 34

   37 WHILE_STATEMENT: WHILE . EXPRESSION ':' STATEMENT
   38                | WHILE . EXPRESSION ':' STATEMENT ELSE ':' STATEMENT

    ID        shift, and go to state 31
    INTEGER   shift, and go to state 57
    FLOAT     shift, and go to state 58
    OP_PLUS   shift, and go to state 59
    OP_MINUS  shift, and go to state 60
    OP_NOT    shift, and go to state 61

    VARIABLE             go to state 62
    PROCEDURE_STATEMENT  go to state 63
    EXPRESSION           go to state 69
    SIMPLE_EXPRESSION    go to state 65
    TERM                 go to state 66
    FACTOR               go to state 67
    SIGN                 go to state 68


State 35

   39 FOR_STATEMENT: FOR . EXPRESSION IN EXPRESSION ':' STATEMENT
   40              | FOR . EXPRESSION IN EXPRESSION ':' STATEMENT ELSE ':' STATEMENT

    ID        shift, and go to state 31
    INTEGER   shift, and go to state 57
    FLOAT     shift, and go to state 58
    OP_PLUS   shift, and go to state 59
    OP_MINUS  shift, and go to state 60
    OP_NOT    shift, and go to state 61

    VARIABLE             go to state 62
    PROCEDURE_STATEMENT  go to state 63
    EXPRESSION           go to state 70
    SIMPLE_EXPRESSION    go to state 65
    TERM                 go to state 66
    FACTOR               go to state 67
    SIGN                 go to state 68


State 36

   29 STATEMENT: RETURN . EXPRESSION

    ID        shift, and go to state 31
    INTEGER   shift, and go to state 57
    FLOAT     shift, and go to state 58
    OP_PLUS   shift, and go to state 59
    OP_MINUS  shift, and go to state 60
    OP_NOT    shift, and go to state 61

    VARIABLE             go to state 62
    PROCEDURE_STATEMENT  go to state 63
    EXPRESSION           go to state 71
    SIMPLE_EXPRESSION    go to state 65
    TERM                 go to state 66
    FACTOR               go to state 67
    SIGN                 go to state 68


State 37

   41 PRINT_STATEMENT: PRINT .
   42                | PRINT . '(' EXPRESSION ')'

    '('  shift, and go to state 72

    $default  reduce using rule 41 (PRINT_STATEMENT)


State 38

   25 STATEMENT: COMPOUND_STATEMENT .

    $default  reduce using rule 25 (STATEMENT)


State 39

   19 COMPOUND_STATEMENT: BODY_BEGIN STATEMENT_LIST . BODY_END

    BODY_END  shift, and go to state 73


State 40

   20 STATEMENT_LIST: STATEMENT .
   21               | STATEMENT . SEMICOLON STATEMENT_LIST

    SEMICOLON  shift, and go to state 74
